Update Sync Forked Repository.yml

--- a/.github/workflows/Sync Forked Repository.yml
+++ b/.github/workflows/Sync Forked Repository.yml
@@ -10,13 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Target Repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # 获取完整历史，防止同步冲突
+
       - name: Sync with Upstream (Exclude .github)
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git remote add upstream https://github.com/Aethersailor/Custom_OpenClash_Rules.git || true
           git fetch upstream
-          find . -mindepth 1 -maxdepth 1 \ \( ! -name '.github' \) -exec rm -rf {} +
+          find . -mindepth 1 -maxdepth 1 \( ! -name '.github' \) -exec rm -rf {} +
           git checkout upstream/main -- .
           rm -rf .github
           git add .
