--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,25 +15,25 @@ jobs:
         with:
           fetch-depth: 0  # 获取完整历史，防止同步冲突
 
-      - name: Sync with Upstream (Exclude .github)
+      - name: Sync with Upstream and Push Changes
         run: |
+          # 配置 Git 用户
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
-          git remote add upstream https://github.com/Aethersailor/Custom_OpenClash_Rules.git || true
-          git fetch upstream
-          
-          # 删除除 .github 和 .git 以外的所有文件
-          find . -mindepth 1 -maxdepth 1 ! -name '.github' ! -name '.git' -exec rm -rf {} +
 
-          # 同步其他文件，但排除 .github 文件夹
-          git checkout upstream/main -- .
+          # 删除当前目录下所有非隐藏文件和文件夹（除 .git 和 .github）
+          find . -mindepth 1 -maxdepth 1 ! -name '.git' ! -name '.github' -exec rm -rf {} +
 
-          # 恢复本地的 .github 文件夹，确保不被同步影响
-          git checkout -- .github
+          # 克隆上游仓库到临时文件夹
+          git clone https://github.com/Aethersailor/Custom_OpenClash_Rules.git /tmp/Custom_OpenClash_Rules
 
-          # 确保 .github 文件夹的内容不被同步到 GitHub
-          git rm -r --cached .github
+          # 删除临时文件夹中的 .github 等隐藏文件夹
+          rm -rf /tmp/Custom_OpenClash_Rules/.github
 
+          # 将临时文件夹中的内容复制到当前仓库目录
+          cp -r /tmp/Custom_OpenClash_Rules/* ./
+
+          # 提交更改并推送到仓库的 main 分支
           git add .
           git commit -m "Sync with upstream repository" || echo "No changes to commit"
           git push origin main --force
