--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,3 +51,13 @@ jobs:
           git add .
           git commit -m "Sync with upstream repository" || echo "No changes to commit"
           git push origin main --force
+
+      - name: Delete workflow runs
+        uses: Mattraks/delete-workflow-runs@v2
+        with:
+          token: ${{ github.token }}
+          repository: ${{ github.repository }}
+          retain_days: 0  # 立即删除达到保留天数的 runs
+          keep_minimum_runs: 0  # 保留的最少 runs
+          #delete_workflow_pattern: Clean Repository.yml
+          delete_run_by_conclusion_pattern: "action_required,cancelled,failure,skipped,success"
