--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Sync Forked Repository
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天午夜同步
+    - cron: '7 * * * *'  # 每小时的第 7 分钟执行
   workflow_dispatch:  # 允许手动触发
 
 jobs:
