--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
           # 克隆上游仓库到临时文件夹
           # git clone https://github.com/Aethersailor/Custom_OpenClash_Rules.git /tmp/Custom_OpenClash_Rules
-          git clone https://$GH_TOKEN@github.com/Aethersailor/Custom_OpenClash_Rules.git /tmp/Custom_OpenClash_Rules
+          git clone https://x-access-token:${GH_TOKEN}@github.com/Aethersailor/Custom_OpenClash_Rules.git /tmp/Custom_OpenClash_Rules
 
           # 删除临时文件夹中的 .github 等隐藏文件夹
           rm -rf /tmp/Custom_OpenClash_Rules/.github
