--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,7 @@ jobs:
           find . -mindepth 1 -maxdepth 1 ! -name '.git' ! -name '.github' -exec rm -rf {} +
 
           # 克隆上游仓库到临时文件夹
-          # git clone https://github.com/Aethersailor/Custom_OpenClash_Rules.git /tmp/Custom_OpenClash_Rules
-          git clone https://x-access-token:${GH_TOKEN}@github.com/Aethersailor/Custom_OpenClash_Rules.git /tmp/Custom_OpenClash_Rules
+          git clone https://github.com/Aethersailor/Custom_OpenClash_Rules.git /tmp/Custom_OpenClash_Rules
 
           # 删除临时文件夹中的 .github 等隐藏文件夹
           rm -rf /tmp/Custom_OpenClash_Rules/.github
