--- a/.github/Custom_Clash.ini
+++ b/.github/Custom_Clash.ini
@@ -119,16 +119,16 @@ custom_proxy_group=☁️ CF节点`url-test`(Cloudflare|CF)`http://91.108.56.138
 custom_proxy_group=🇧🇲 百慕达节点`url-test`(百慕达|BM)`http://91.108.56.138`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(^(?!.*(BM|百慕大)).*(港|HK|hk|Hong Kong|HongKong|hongkong|深港))`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(^(?!.*(BM|百慕大)).*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates))`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(^(?!.*(BM|百慕大)).*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|JP|Japan|🇯🇵)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡节点`url-test`(^(?!.*(BM|百慕大)).*(新加坡|坡|狮城|SG|Singapore)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇼🇸 台湾节点`url-test`(^(?!.*(BM|百慕大)).*(台|新北|彰化|TW|Taiwan)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国节点`url-test`(^(?!.*(BM|百慕大)).*(KR|Korea|KOR|首尔|韩|韓)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇨🇦 加拿大节点`url-test`(^(?!.*(BM|百慕大)).*(加拿大|Canada|渥太华|温哥华|卡尔加里)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇬🇧 英国节点`url-test`(^(?!.*(BM|百慕大)).*(英国|Great Britain|United Kingdom|England|伦敦)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇫🇷 法国节点`url-test`(^(?!.*(BM|百慕大)).*(法国|France|巴黎)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(^(?!.*(BM|百慕大)).*(德国|Germany|柏林|法兰克福)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇳🇱 荷兰节点`url-test`(^(?!.*(BM|百慕大)).*(荷兰|Netherlands|阿姆斯特丹)`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇷 土耳其节点`url-test`(^(?!.*(BM|百慕大)).*(土耳其|Turkey|Türkiye)`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(^(?!.*(BM|百慕大)).*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|JP|Japan|🇯🇵))`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡节点`url-test`(^(?!.*(BM|百慕大)).*(新加坡|坡|狮城|SG|Singapore))`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇼🇸 台湾节点`url-test`(^(?!.*(BM|百慕大)).*(台|新北|彰化|TW|Taiwan))`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`url-test`(^(?!.*(BM|百慕大)).*(KR|Korea|KOR|首尔|韩|韓))`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇨🇦 加拿大节点`url-test`(^(?!.*(BM|百慕大)).*(加拿大|Canada|渥太华|温哥华|卡尔加里))`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇬🇧 英国节点`url-test`(^(?!.*(BM|百慕大)).*(英国|Great Britain|United Kingdom|England|伦敦))`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇫🇷 法国节点`url-test`(^(?!.*(BM|百慕大)).*(法国|France|巴黎))`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇩🇪 德国节点`url-test`(^(?!.*(BM|百慕大)).*(德国|Germany|柏林|法兰克福))`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇳🇱 荷兰节点`url-test`(^(?!.*(BM|百慕大)).*(荷兰|Netherlands|阿姆斯特丹))`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇷 土耳其节点`url-test`(^(?!.*(BM|百慕大)).*(土耳其|Turkey|Türkiye))`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌐 其他地区`url-test`(^(?!.*(百慕达|BM|港|Cloudflare|CF|HK|hk|Hong Kong|HongKong|hongkong|深港|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|JP|Japan|🇯🇵|新加坡|坡|狮城|SG|Singapore|台|新北|彰化|TW|Taiwan|KR|Korea|KOR|首尔|韩|韓|加拿大|Canada|渥太华|温哥华|卡尔加里|英国|Great Britain|United Kingdom|England|伦敦|法国|France|巴黎|德国|Germany|柏林|法兰克福|荷兰|Netherlands|阿姆斯特丹|土耳其|Turkey|Türkiye)).*)`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
