--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -8,61 +8,30 @@
 ;有问题可提 issue，或者加入本项目 Telegram 群组进行讨论
 ;Telegram 群组：https://t.me/custom_openclash_rules_group
 ;Telegram 通知频道：https://t.me/custom_openclash_rules
-;建议加入通知频道或群组，谨防失联
+
+;GFW 黑名单规则，仅代理 GFW 网站和部分 IP
+;GFW 以外网站域名，不分国内外全部直连
+;Telegram/facebook/twitter 之外的 IP 连接，不分国内外全部直连
+;适合仅需要代理 GFW 网站，且流量较少、无分流和解锁需求的用户
+
+;因为 DNS 泄露网站全部直连，因此本规则无法通过 DNS 泄露检测，但实际不存在泄露
 
 [custom]
 ;设置规则标志位
 ;以下规则，按照从上往下的顺序遍历，优先命中上位规则，规则重复无影响
 ;修改顺序会影响分流效果
-
-;本地地址和域名直连
-ruleset=🎯 全球直连,[]GEOSITE,private
-ruleset=🎯 全球直连,[]GEOIP,private,no-resolve
-;本项目收录的直连规则
-ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical.yaml,28800
-;本项目收录的代理规则
-ruleset=🚀 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical.yaml,28800
-;谷歌在国内可用的域名直连
-ruleset=🎯 全球直连,[]GEOSITE,google-cn
-;国内游戏域名直连
-ruleset=🎯 全球直连,[]GEOSITE,category-games@cn
-;Steam 下载 CDN 直连
-ruleset=🎯 全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Steam_CDN_Classical.yaml,28800
-;各大游戏平台下载域名直连
-ruleset=🎯 全球直连,[]GEOSITE,category-game-platforms-download
-;BT Tracker 相关域名直连
-ruleset=🎯 全球直连,[]GEOSITE,category-public-tracker
-;即时通讯包括了 Telegram/WhatsApp/Line 等海外主流即时通讯软件域名
-;由于 OpenClash 使用的大陆白名单收录不全，此处留有 geosite:cn 作为国内域名兜底
-ruleset=🎯 全球直连,[]GEOSITE,cn
-;由于 OpenClash 使用的大陆白名单收录不全，此处留有 geoip:cn 作为国内 IP 兜底
-ruleset=🎯 全球直连,[]GEOIP,cn,no-resolve
-;以上兜底规则会根据实际情况随时取消
-;国内冷门域名会命中漏网之鱼，如影响使用，请设置漏网之鱼直连
-;漏网之鱼直连时，无法通过 DNS 泄露测试，但是并不存在泄露
-ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=🚀 手动选择,[]GEOSITE,gfw
+ruleset=🚀 手动选择,[]GEOIP,telegram,no-resolve
+ruleset=🚀 手动选择,[]GEOIP,facebook,no-resolve
+ruleset=🚀 手动选择,[]GEOIP,twitter,no-resolve
+ruleset=🎯 全球直连,[]FINAL
 ;设置规则标志位结束
 
 ;设置节点分组标志位
 ;节点地区分组参考本项目推荐机场而设立
-custom_proxy_group=🚀 手动选择`select`[]🇭🇰 香港节点`[]♻️ 自动选择`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://91.108.56.178:443`300,,50
-
-custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|深港)`http://91.108.56.178:443`300,,50
-custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates)`http://91.108.56.178:443`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|JP|Japan|🇯🇵)`http://91.108.56.178:443`300,,50
-custom_proxy_group=🇸🇬 新加坡节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://91.108.56.178:443`300,,50
-custom_proxy_group=🇼🇸 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://91.108.56.178:443`300,,50
-custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://91.108.56.178:443`300,,50
-custom_proxy_group=🇨🇦 加拿大节点`url-test`(加拿大|Canada|渥太华|温哥华|卡尔加里)`http://91.108.56.178:443`300,,50
-custom_proxy_group=🇬🇧 英国节点`url-test`(英国|Britain|United Kingdom|England|伦敦)`http://91.108.56.178:443`300,,50
-custom_proxy_group=🇫🇷 法国节点`url-test`(法国|France|巴黎)`http://91.108.56.178:443`300,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(德国|Germany|柏林|法兰克福)`http://91.108.56.178:443`300,,50
-custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|Netherlands|阿姆斯特丹)`http://91.108.56.178:443`300,,50
-custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|Turkey|Türkiye)`http://91.108.56.178:443`300,,50
-custom_proxy_group=🌐 其他地区`url-test`(^(?!.*(港|HK|hk|Hong Kong|HongKong|hongkong|深港|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|(?<!尼|-)日|JP|Japan|🇯🇵|新加坡|坡|狮城|SG|Singapore|台|新北|彰化|TW|Taiwan|KR|Korea|KOR|首尔|韩|韓|加拿大|Canada|渥太华|温哥华|卡尔加里|英国|Britain|United Kingdom|England|伦敦|法国|France|巴黎|德国|Germany|柏林|法兰克福|荷兰|Netherlands|阿姆斯特丹|土耳其|Turkey|Türkiye)).*)`http://91.108.56.178:443`300,,50
+custom_proxy_group=🚀 手动选择`select`[]♻️ 自动选择`.*
+custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 ;设置分组标志位
 
 ;下方参数请勿修改
