--- a/.github/Custom_Clash.ini
+++ b/.github/Custom_Clash.ini
@@ -115,9 +115,9 @@ custom_proxy_group=🎮 Steam`select`[]🚀 手动选择`[]♻️ 自动选择`[
 custom_proxy_group=🚀 测速工具`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]☁️ CF节点`[]⚡ 延迟选优`[]🚑 故障转移`[]🔄 负载均衡(轮询)`[]🎯 负载均衡(一致性哈希)`[]🤝 负载均衡(会话黏性)`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]☁️ CF节点`[]⚡ 延迟选优`[]🚑 故障转移`[]🔄 负载均衡(轮询)`[]🎯 负载均衡(一致性哈希)`[]🤝 负载均衡(会话黏性)`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区
 custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]🎯 全球直连
-custom_proxy_group=☁️ CF节点`url-test`(Cloudflare|CF)`http://91.108.56.138`300,,50
+custom_proxy_group=☁️ CF节点`url-test`(Cloudflare|CF)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=⚡ 延迟选优`url-test`(百慕达|BM)`http://91.108.56.138`300,,50
+custom_proxy_group=⚡ 延迟选优`url-test`(百慕达|BM)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚑 故障转移`fallback`(百慕达|BM)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔄 负载均衡(轮询)`load-balance`round-robin`(百慕达|BM)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 负载均衡(一致性哈希)`load-balance`consistent-hashing`(百慕达|BM)`http://www.gstatic.com/generate_204`300,,50
