--- a/.github/Custom_Clash.ini
+++ b/.github/Custom_Clash.ini
@@ -115,13 +115,13 @@ custom_proxy_group=🎮 Steam`select`[]🚀 手动选择`[]♻️ 自动选择`[
 custom_proxy_group=🚀 测速工具`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]☁️ CF节点`[]⚡ 延迟选优`[]🚑 故障转移`[]🔄 负载均衡(轮询)`[]🎯 负载均衡(一致性哈希)`[]🤝 负载均衡(会话黏性)`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`[]☁️ CF节点`[]⚡ 延迟选优`[]🚑 故障转移`[]🔄 负载均衡(轮询)`[]🎯 负载均衡(一致性哈希)`[]🤝 负载均衡(会话黏性)`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区
 custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]🎯 全球直连
-custom_proxy_group=☁️ CF节点`url-test`(Cloudflare|CF)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=☁️ CF节点`url-test`(Cloudflare|CF)`https://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=⚡ 延迟选优`url-test`(百慕达|BM)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🚑 故障转移`fallback`(百慕达|BM)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔄 负载均衡(轮询)`load-balance`round-robin`(百慕达|BM)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 负载均衡(一致性哈希)`load-balance`consistent-hashing`(百慕达|BM)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🤝 负载均衡(会话黏性)`load-balance`sticky-sessions`(百慕达|BM)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⚡ 延迟选优`url-test`(百慕达|BM)`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🚑 故障转移`fallback`(百慕达|BM)`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔄 负载均衡(轮询)`load-balance`round-robin`(百慕达|BM)`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🎯 负载均衡(一致性哈希)`load-balance`consistent-hashing`(百慕达|BM)`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🤝 负载均衡(会话黏性)`load-balance`sticky-sessions`(百慕达|BM)`https://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🇭🇰 香港节点`url-test`(^(?!.*(BM|百慕大)).*(港|HK|hk|Hong Kong|HongKong|hongkong|深港))`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(^(?!.*(BM|百慕大)).*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|UnitedStates))`https://www.gstatic.com/generate_204`300,,50
