--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -29,10 +29,8 @@ ruleset=🎯 全球直连,[]FINAL
 
 ;设置节点分组标志位
 ;节点地区分组参考本项目推荐机场而设立
-custom_proxy_group=🚀 手动选择`select`[]🇭🇰 香港节点`[]♻️ 自动选择`.*
+custom_proxy_group=🚀 手动选择`select`[]♻️ 自动选择`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|深港)`http://91.108.56.178:443`300,,50
-
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 ;设置分组标志位
 
