--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -29,7 +29,7 @@ ruleset=🎯 全球直连,[]FINAL
 
 ;设置节点分组标志位
 ;节点地区分组参考本项目推荐机场而设立
-custom_proxy_group=🚀 手动选择`select`[]♻️ 自动选择`[]⚡ 延迟选优`[]🚑 故障转移`[]🔄 负载均衡(轮询)`[]🎯 负载均衡(一致性哈希)`[]🤝 负载均衡(会话黏性)`.*
+custom_proxy_group=🚀 手动选择`select`[]⚡ 延迟选优`[]🚑 故障转移`[]🔄 负载均衡(轮询)`[]🎯 负载均衡(一致性哈希)`[]🤝 负载均衡(会话黏性)`.*
 ;custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=⚡ 延迟选优`url-test`.*`http://149.154.175.58:443`300,,50
 custom_proxy_group=🚑 故障转移`fallback`.*`http://149.154.175.58:443`300,,50
