--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -20,11 +20,11 @@
 ;设置规则标志位
 ;以下规则，按照从上往下的顺序遍历，优先命中上位规则，规则重复无影响
 ;修改顺序会影响分流效果
-ruleset=🚀 手动选择,[]GEOSITE,gfw
-ruleset=🚀 手动选择,[]GEOIP,telegram,no-resolve
-ruleset=🚀 手动选择,[]GEOIP,facebook,no-resolve
-ruleset=🚀 手动选择,[]GEOIP,twitter,no-resolve
-ruleset=🎯 全球直连,[]FINAL
+;ruleset=🚀 手动选择,[]GEOSITE,gfw
+;ruleset=🚀 手动选择,[]GEOIP,telegram,no-resolve
+;ruleset=🚀 手动选择,[]GEOIP,facebook,no-resolve
+;ruleset=🚀 手动选择,[]GEOIP,twitter,no-resolve
+ruleset=🚀 手动选择,[]FINAL
 ;设置规则标志位结束
 
 ;设置节点分组标志位
