--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -1,4 +1,6 @@
 ;Custom_OpenClash_Rules
+#http://149.154.175.58:443
+#https://www.gstatic.com/generate_204
 ;全分组防 DNS 泄漏订阅转换模板
 ;作者：https://github.com/Aethersailor
 ;项目地址：https://github.com/Aethersailor/Custom_OpenClash_Rules
@@ -31,11 +33,11 @@ ruleset=🚀 手动选择,[]FINAL
 ;节点地区分组参考本项目推荐机场而设立
 custom_proxy_group=🚀 手动选择`select`[]⚡ 延迟选优`[]🚑 故障转移`[]🔄 负载均衡(轮询)`[]🎯 负载均衡(一致性哈希)`[]🤝 负载均衡(会话黏性)`.*
 ;custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=⚡ 延迟选优`url-test`.*`http://149.154.175.58:443`300,,50
-custom_proxy_group=🚑 故障转移`fallback`.*`http://149.154.175.58:443`300,,50
-custom_proxy_group=🔄 负载均衡(轮询)`load-balance`round-robin`.*`http://149.154.175.58:443`300,,50
-custom_proxy_group=🎯 负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`http://149.154.175.58:443`300,,50
-custom_proxy_group=🤝 负载均衡(会话黏性)`load-balance`sticky-sessions`.*`http://149.154.175.58:443`300,,50
+custom_proxy_group=⚡ 延迟选优`url-test`.*`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🚑 故障转移`fallback`.*`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔄 负载均衡(轮询)`load-balance`round-robin`.*`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🎯 负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🤝 负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://www.gstatic.com/generate_204`300,,50
 
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
