--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -22,25 +22,92 @@
 ;设置规则标志位
 ;以下规则，按照从上往下的顺序遍历，优先命中上位规则，规则重复无影响
 ;修改顺序会影响分流效果
-;ruleset=🚀 手动选择,[]GEOSITE,gfw
-;ruleset=🚀 手动选择,[]GEOIP,telegram,no-resolve
-;ruleset=🚀 手动选择,[]GEOIP,facebook,no-resolve
-;ruleset=🚀 手动选择,[]GEOIP,twitter,no-resolve
-ruleset=🚀 手动选择,[]FINAL
+;ruleset=手动选择,[]GEOSITE,gfw
+;ruleset=手动选择,[]GEOIP,telegram,no-resolve
+;ruleset=手动选择,[]GEOIP,facebook,no-resolve
+;ruleset=手动选择,[]GEOIP,twitter,no-resolve
+;ruleset=手动选择,[]FINAL
+;设置规则标志位结束
+ruleset=全球直连,[]GEOSITE,private
+ruleset=全球直连,[]GEOIP,private,no-resolve
+;本项目收录的直连规则
+ruleset=全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical.yaml,28800
+;本项目收录的代理规则
+ruleset=手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical.yaml,28800
+;谷歌在国内可用的域名直连
+ruleset=全球直连,[]GEOSITE,google-cn
+;国内游戏域名直连
+ruleset=全球直连,[]GEOSITE,category-games@cn
+;Steam 下载 CDN 直连
+ruleset=全球直连,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Steam_CDN_Classical.yaml,28800
+;各大游戏平台下载域名直连
+ruleset=全球直连,[]GEOSITE,category-game-platforms-download
+;BT Tracker 相关域名直连
+ruleset=全球直连,[]GEOSITE,category-public-tracker
+;即时通讯包括了 Telegram/WhatsApp/Line 等海外主流即时通讯软件域名
+ruleset=TG,[]GEOSITE,category-communication
+;社交媒体包括了 Twitter(X)/Facebook/Instagram 等海外主流社交媒体
+ruleset=手动选择,[]GEOSITE,category-social-media-!cn
+ruleset=全球直连,[]GEOSITE,openai
+ruleset=全球直连,[]GEOSITE,bing
+ruleset=全球直连,[]GEOSITE,category-ai-!cn
+ruleset=全球直连,[]GEOSITE,github
+;测速工具包括 SpeedTest 等主流测速工具域名
+ruleset=手动选择,[]GEOSITE,category-speedtest
+ruleset=手动选择,[]GEOSITE,steam
+ruleset=手动选择,[]GEOSITE,youtube
+ruleset=手动选择,[]GEOSITE,apple-tvplus
+ruleset=手动选择,[]GEOSITE,apple
+ruleset=手动选择,[]GEOSITE,microsoft
+ruleset=手动选择,[]GEOSITE,googlefcm
+ruleset=手动选择,[]GEOSITE,google
+ruleset=手动选择,[]GEOSITE,tiktok
+ruleset=手动选择,[]GEOSITE,netflix
+ruleset=手动选择,[]GEOSITE,disney
+ruleset=手动选择,[]GEOSITE,hbo
+ruleset=手动选择deo,[]GEOSITE,primevideo
+;Emby 包括主流 Emby 服务相关域名
+ruleset=手动选择,[]GEOSITE,category-emby
+ruleset=手动选择,[]GEOSITE,spotify
+ruleset=手动选择,[]GEOSITE,bahamut
+ruleset=手动选择,[]GEOSITE,category-games
+ruleset=手动选择,[]GEOSITE,category-entertainment
+ruleset=手动选择,[]GEOSITE,category-ecommerce
+ruleset=手动选择,[]GEOSITE,gfw
+ruleset=即时通讯,[]GEOIP,telegram,no-resolve
+ruleset=手动选择,[]GEOIP,twitter,no-resolve
+ruleset=手动选择,[]GEOIP,facebook,no-resolve
+ruleset=手动选择,[]GEOIP,google,no-resolve
+ruleset=手动选择,[]GEOIP,netflix,no-resolve
+;由于 OpenClash 使用的大陆白名单收录不全，此处留有 geosite:cn 作为国内域名兜底
+ruleset=全球直连,[]GEOSITE,cn
+;由于 OpenClash 使用的大陆白名单收录不全，此处留有 geoip:cn 作为国内 IP 兜底
+ruleset=全球直连,[]GEOIP,cn,no-resolve
+;以上兜底规则会根据实际情况随时取消
+;国内冷门域名会命中漏网之鱼，如影响使用，请设置漏网之鱼直连
+;漏网之鱼直连时，无法通过 DNS 泄露测试，但是并不存在泄露
+ruleset=漏网之鱼,[]FINAL
 ;设置规则标志位结束
 
 ;设置节点分组标志位
 ;节点地区分组参考本项目推荐机场而设立
-custom_proxy_group=🚀 手动选择`select`[]⚡ 延迟选优`[]🚑 故障转移`[]🔄 负载均衡(轮询)`[]🎯 负载均衡(一致性哈希)`[]🤝 负载均衡(会话黏性)`.*
-;custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`60,,50
-custom_proxy_group=⚡ 延迟选优`url-test`.*`https://www.gstatic.com/generate_204`60,,50
-custom_proxy_group=🚑 故障转移`fallback`.*`https://www.gstatic.com/generate_204`60,,50
-custom_proxy_group=🔄 负载均衡(轮询)`load-balance`round-robin`.*`https://www.gstatic.com/generate_204`60,,50
-custom_proxy_group=🎯 负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://www.gstatic.com/generate_204`60,,50
-custom_proxy_group=🤝 负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://www.gstatic.com/generate_204`60,,50
+custom_proxy_group=手动选择`select`[]延迟选优`[]故障转移`[]负载均衡(轮询)`[]负载均衡(一致性哈希)`[]负载均衡(会话黏性)`.*
+custom_proxy_group=即时通讯`select`[]TG_延迟选优`[]TG_故障转移`[]TG_负载均衡(轮询)`[]TG_负载均衡(一致性哈希)`[]TG_负载均衡(会话黏性)`.*
+
+;Template
+custom_proxy_group=NAME`select`[]NAME_延迟选优`[]NAME_故障转移`[]NAME_负载均衡(轮询)`[]NAME_负载均衡(一致性哈希)`[]NAME_负载均衡(会话黏性)`.*
+custom_proxy_group=NAME_延迟选优`url-test`.*`https://www.gstatic.com/generate_204`60,,50
+custom_proxy_group=NAME_故障转移`fallback`.*`https://www.gstatic.com/generate_204`60,,50
+custom_proxy_group=NAME_负载均衡(轮询)`load-balance`round-robin`.*`https://www.gstatic.com/generate_204`60,,50
+custom_proxy_group=NAME_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://www.gstatic.com/generate_204`60,,50
+custom_proxy_group=NAME_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://www.gstatic.com/generate_204`60,,50
+;Template
 
 
-custom_proxy_group=🎯 全球直连`select`[]DIRECT
+
+
+
+custom_proxy_group=全球直连`select`[]DIRECT
 ;设置分组标志位
 
 ;下方参数请勿修改
