--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -125,7 +125,7 @@ custom_proxy_group=rou.video_负载均衡(会话黏性)`load-balance`sticky-sess
 ;custom_proxy_group=NAME_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`TEST_URL`60,,50
 ;Template
 
-custom_proxy_group=漏网之鱼`select`[]延迟选优`[]故障转移`[]负载均衡(轮询)`[]负载均衡(一致性哈希)`[]负载均衡(会话黏性)`[]全球直连`.*
+custom_proxy_group=漏网之鱼`select`[]手动选择`[]全球直连`.*
 custom_proxy_group=全球直连`select`[]DIRECT
 ;设置分组标志位
 
