--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -65,7 +65,7 @@ ruleset=手动选择,[]GEOSITE,tiktok
 ruleset=手动选择,[]GEOSITE,netflix
 ruleset=手动选择,[]GEOSITE,disney
 ruleset=手动选择,[]GEOSITE,hbo
-ruleset=手动选择deo,[]GEOSITE,primevideo
+ruleset=手动选择,[]GEOSITE,primevideo
 ;Emby 包括主流 Emby 服务相关域名
 ruleset=手动选择,[]GEOSITE,category-emby
 ruleset=手动选择,[]GEOSITE,spotify
