--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -74,7 +74,7 @@ ruleset=手动选择,[]GEOSITE,category-games
 ruleset=手动选择,[]GEOSITE,category-entertainment
 ruleset=手动选择,[]GEOSITE,category-ecommerce
 ruleset=手动选择,[]GEOSITE,gfw
-ruleset=即时通讯,[]GEOIP,telegram,no-resolve
+ruleset=TG,[]GEOIP,telegram,no-resolve
 ruleset=手动选择,[]GEOIP,twitter,no-resolve
 ruleset=手动选择,[]GEOIP,facebook,no-resolve
 ruleset=手动选择,[]GEOIP,google,no-resolve
