--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -129,7 +129,7 @@ custom_proxy_group=延迟选优`url-test`.*`https://www.gstatic.com/generate_204
 ;custom_proxy_group=NAME_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`TEST_URL`60,,50
 ;Template
 
-custom_proxy_group=漏网之鱼`select`[]手动选择`[]全球直连`.*
+custom_proxy_group=漏网之鱼`select`[]TG`[]rou.video`[]手动选择`[]全球直连`.*
 custom_proxy_group=全球直连`select`[]DIRECT
 ;设置分组标志位
 
