--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -94,6 +94,7 @@ ruleset=漏网之鱼,[]FINAL
 ;custom_proxy_group=手动选择`select`[]延迟选优`[]故障转移`[]负载均衡(轮询)`[]负载均衡(一致性哈希)`[]负载均衡(会话黏性)`[]全球直连`.*
 ruleset=rou.video,[]DOMAIN-SUFFIX,rou.video
 ruleset=rou.video,[]DOMAIN-KEYWORD,v.rn
+ruleset=rou.video,[]DOMAIN-KEYWORD,xyz
 
 custom_proxy_group=TG`select`[]TG_延迟选优`[]TG_故障转移`[]TG_负载均衡(轮询)`[]TG_负载均衡(一致性哈希)`[]TG_负载均衡(会话黏性)`.*
 custom_proxy_group=rou.video`select`[]rou.video_延迟选优`[]rou.video_故障转移`[]rou.video_负载均衡(轮询)`[]rou.video_负载均衡(一致性哈希)`[]rou.video_负载均衡(会话黏性)`.*
