--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -92,12 +92,12 @@ ruleset=漏网之鱼,[]FINAL
 ;设置节点分组标志位
 ;节点地区分组参考本项目推荐机场而设立
 ;custom_proxy_group=手动选择`select`[]延迟选优`[]故障转移`[]负载均衡(轮询)`[]负载均衡(一致性哈希)`[]负载均衡(会话黏性)`[]全球直连`.*
-ruleset=rou.video,[]DOMAIN-KEYWORD,v.rn
-ruleset=rou.video,[]DOMAIN-KEYWORD,xyz
-ruleset=rou.video,[]DOMAIN-KEYWORD,rou
+ruleset=rou,[]DOMAIN-KEYWORD,v.rn
+ruleset=rou,[]DOMAIN-KEYWORD,xyz
+ruleset=rou,[]DOMAIN-KEYWORD,rou
 
 custom_proxy_group=TG`select`[]TG_延迟选优`[]TG_故障转移`[]TG_负载均衡(轮询)`[]TG_负载均衡(一致性哈希)`[]TG_负载均衡(会话黏性)`.*
-custom_proxy_group=rou.video`select`[]rou.video_延迟选优`[]rou.video_故障转移`[]rou.video_负载均衡(轮询)`[]rou.video_负载均衡(一致性哈希)`[]rou.video_负载均衡(会话黏性)`.*
+custom_proxy_group=rou`select`[]rou_延迟选优`[]rou_故障转移`[]rou_负载均衡(轮询)`[]rou_负载均衡(一致性哈希)`[]rou_负载均衡(会话黏性)`.*
 
 ;custom_proxy_group=故障转移`fallback`.*`https://www.gstatic.com/generate_204`60,,50
 ;custom_proxy_group=负载均衡(轮询)`load-balance`round-robin`.*`https://www.gstatic.com/generate_204`60,,50
@@ -110,11 +110,11 @@ custom_proxy_group=TG_负载均衡(轮询)`load-balance`round-robin`.*`http://14
 custom_proxy_group=TG_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`http://149.154.175.58:443`60,,50
 custom_proxy_group=TG_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`http://149.154.175.58:443`60,,50
 
-custom_proxy_group=rou.video_延迟选优`url-test`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
-custom_proxy_group=rou.video_故障转移`fallback`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
-custom_proxy_group=rou.video_负载均衡(轮询)`load-balance`round-robin`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
-custom_proxy_group=rou.video_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
-custom_proxy_group=rou.video_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
+custom_proxy_group=rou_延迟选优`url-test`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
+custom_proxy_group=rou_故障转移`fallback`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
+custom_proxy_group=rou_负载均衡(轮询)`load-balance`round-robin`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
+custom_proxy_group=rou_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
+custom_proxy_group=rou_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
 
 custom_proxy_group=手动选择`select`[]延迟选优`[]全球直连`.*
 custom_proxy_group=延迟选优`url-test`.*`https://www.gstatic.com/generate_204`60,,50
