--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -28,6 +28,7 @@
 ;ruleset=手动选择,[]GEOIP,twitter,no-resolve
 ;ruleset=手动选择,[]FINAL
 ;设置规则标志位结束
+ruleset=自定义代理,https://raw.githubusercontent.com/superpassby/Custom_OpenClash_Rules/refs/heads/main/.github/MyRule/Proxy.list,28800
 ruleset=全球直连,[]GEOSITE,private
 ruleset=全球直连,[]GEOIP,private,no-resolve
 ;本项目收录的直连规则
@@ -98,6 +99,7 @@ ruleset=rou,[]DOMAIN-KEYWORD,rou
 
 custom_proxy_group=TG`select`[]TG_延迟选优`[]TG_故障转移`[]TG_负载均衡(轮询)`[]TG_负载均衡(一致性哈希)`[]TG_负载均衡(会话黏性)`.*
 custom_proxy_group=rou`select`[]rou_延迟选优`[]rou_故障转移`[]rou_负载均衡(轮询)`[]rou_负载均衡(一致性哈希)`[]rou_负载均衡(会话黏性)`.*
+custom_proxy_group=自定义代理`select`[]TG`[]rou`[]延迟选优`.*
 
 ;custom_proxy_group=故障转移`fallback`.*`https://www.gstatic.com/generate_204`60,,50
 ;custom_proxy_group=负载均衡(轮询)`load-balance`round-robin`.*`https://www.gstatic.com/generate_204`60,,50
