--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -99,12 +99,7 @@ ruleset=rou,[]DOMAIN-KEYWORD,rou
 
 custom_proxy_group=TG`select`[]TG_延迟选优`[]TG_故障转移`[]TG_负载均衡(轮询)`[]TG_负载均衡(一致性哈希)`[]TG_负载均衡(会话黏性)`.*
 custom_proxy_group=rou`select`[]rou_延迟选优`[]rou_故障转移`[]rou_负载均衡(轮询)`[]rou_负载均衡(一致性哈希)`[]rou_负载均衡(会话黏性)`.*
-custom_proxy_group=自定义代理`select`[]TG`[]rou`[]延迟选优`.*
-
-;custom_proxy_group=故障转移`fallback`.*`https://www.gstatic.com/generate_204`60,,50
-;custom_proxy_group=负载均衡(轮询)`load-balance`round-robin`.*`https://www.gstatic.com/generate_204`60,,50
-;custom_proxy_group=负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://www.gstatic.com/generate_204`60,,50
-;custom_proxy_group=负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://www.gstatic.com/generate_204`60,,50
+custom_proxy_group=自定义代理`select`[]TG`[]rou`[]延迟选优`[]故障转移`[]负载均衡(轮询)`[]负载均衡(一致性哈希)`[]负载均衡(会话黏性)`.*
 
 custom_proxy_group=TG_延迟选优`url-test`.*`http://149.154.175.58:443`60,,50
 custom_proxy_group=TG_故障转移`fallback`.*`http://149.154.175.58:443`60,,50
@@ -120,7 +115,10 @@ custom_proxy_group=rou_负载均衡(会话黏性)`load-balance`sticky-sessions`.
 
 custom_proxy_group=手动选择`select`[]延迟选优`[]全球直连`.*
 custom_proxy_group=延迟选优`url-test`.*`https://www.gstatic.com/generate_204`60,,50
-
+custom_proxy_group=故障转移`fallback`.*`https://www.gstatic.com/generate_204`60,,50
+custom_proxy_group=负载均衡(轮询)`load-balance`round-robin`.*`https://www.gstatic.com/generate_204`60,,50
+custom_proxy_group=负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://www.gstatic.com/generate_204`60,,50
+custom_proxy_group=负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://www.gstatic.com/generate_204`60,,50
 
 ;Template
 ;ruleset=NAME,[]DOMAIN-SUFFIX,URL
