--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -114,11 +114,11 @@ custom_proxy_group=rou_负载均衡(一致性哈希)`load-balance`consistent-has
 custom_proxy_group=rou_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
 
 custom_proxy_group=手动选择`select`[]延迟选优`[]全球直连`.*
-custom_proxy_group=延迟选优`url-test`.*`https://jable.tv`60,,50
-custom_proxy_group=故障转移`fallback`.*`https://jable.tv`60,,50
-custom_proxy_group=负载均衡(轮询)`load-balance`round-robin`.*`https://jable.tv`60,,50
-custom_proxy_group=负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://jable.tv`60,,50
-custom_proxy_group=负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://jable.tv`60,,50
+custom_proxy_group=延迟选优`url-test`.*`https://amuse-lefty.mushroomtrack.com/hls/G3lYjtWatNZNpavl-k5kCQ/1757260599/53000/53113/53113.m3u8`60,,50
+custom_proxy_group=故障转移`fallback`.*`https://amuse-lefty.mushroomtrack.com/hls/G3lYjtWatNZNpavl-k5kCQ/1757260599/53000/53113/53113.m3u8`60,,50
+custom_proxy_group=负载均衡(轮询)`load-balance`round-robin`.*`https://amuse-lefty.mushroomtrack.com/hls/G3lYjtWatNZNpavl-k5kCQ/1757260599/53000/53113/53113.m3u8`60,,50
+custom_proxy_group=负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://amuse-lefty.mushroomtrack.com/hls/G3lYjtWatNZNpavl-k5kCQ/1757260599/53000/53113/53113.m3u8`60,,50
+custom_proxy_group=负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://amuse-lefty.mushroomtrack.com/hls/G3lYjtWatNZNpavl-k5kCQ/1757260599/53000/53113/53113.m3u8`60,,50
 
 ;Template
 ;ruleset=NAME,[]DOMAIN-SUFFIX,URL
