--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -28,7 +28,9 @@
 ;ruleset=手动选择,[]GEOIP,twitter,no-resolve
 ;ruleset=手动选择,[]FINAL
 ;设置规则标志位结束
+ruleset=自定义下载,https://raw.githubusercontent.com/superpassby/Custom_OpenClash_Rules/refs/heads/main/.github/MyRule/Download.list,28800
 ruleset=自定义代理,https://raw.githubusercontent.com/superpassby/Custom_OpenClash_Rules/refs/heads/main/.github/MyRule/Proxy.list,28800
+
 ruleset=全球直连,[]GEOSITE,private
 ruleset=全球直连,[]GEOIP,private,no-resolve
 ;本项目收录的直连规则
@@ -99,7 +101,8 @@ ruleset=rou,[]DOMAIN-KEYWORD,rou
 
 custom_proxy_group=TG`select`[]TG_延迟选优`[]TG_故障转移`[]TG_负载均衡(轮询)`[]TG_负载均衡(一致性哈希)`[]TG_负载均衡(会话黏性)`.*
 custom_proxy_group=rou`select`[]rou_延迟选优`[]rou_故障转移`[]rou_负载均衡(轮询)`[]rou_负载均衡(一致性哈希)`[]rou_负载均衡(会话黏性)`.*
-custom_proxy_group=自定义代理`select`[]TG`[]rou`[]延迟选优`[]故障转移`[]负载均衡(轮询)`[]负载均衡(一致性哈希)`[]负载均衡(会话黏性)`[]全球直连`.*
+custom_proxy_group=自定义代理`select`[]WEB_延迟选优`[]WEB_故障转移`[]WEB_负载均衡(轮询)`[]WEB_负载均衡(一致性哈希)`[]WEB_负载均衡(会话黏性)`.*
+custom_proxy_group=自定义下载`select`[]DL_延迟选优`[]DL_故障转移`[]DL_负载均衡(轮询)`[]DL_负载均衡(一致性哈希)`[]DL_负载均衡(会话黏性)`.*
 
 custom_proxy_group=TG_延迟选优`url-test`.*`http://149.154.175.58:443`60,,50
 custom_proxy_group=TG_故障转移`fallback`.*`http://149.154.175.58:443`60,,50
@@ -113,12 +116,18 @@ custom_proxy_group=rou_负载均衡(轮询)`load-balance`round-robin`.*`https://
 custom_proxy_group=rou_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
 custom_proxy_group=rou_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
 
-custom_proxy_group=手动选择`select`[]延迟选优`[]全球直连`.*
-custom_proxy_group=延迟选优`url-test`.*`https://jable.tv`60,,50
-custom_proxy_group=故障转移`fallback`.*`https://jable.tv`60,,50
-custom_proxy_group=负载均衡(轮询)`load-balance`round-robin`.*`https://jable.tv`60,,50
-custom_proxy_group=负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://jable.tv`60,,50
-custom_proxy_group=负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://jable.tv`60,,50
+custom_proxy_group=WEB_延迟选优`url-test`.*`https://jable.tv`60,,50
+custom_proxy_group=WEB_故障转移`fallback`.*`https://jable.tv`60,,50
+custom_proxy_group=WEB_负载均衡(轮询)`load-balance`round-robin`.*`https://jable.tv`60,,50
+custom_proxy_group=WEB_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://jable.tv`60,,50
+custom_proxy_group=WEB_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://jable.tv`60,,50
+
+custom_proxy_group=DL`select`[]DL_延迟选优`[]DL_故障转移`[]DL_负载均衡(轮询)`[]DL_负载均衡(一致性哈希)`[]DL_负载均衡(会话黏性)`.*
+custom_proxy_group=DL_延迟选优`url-test`(YT)`https://adoda-smart-coin.mushroomtrack.com`60,,50
+custom_proxy_group=DL_故障转移`fallback`(YT)`https://adoda-smart-coin.mushroomtrack.com`60,,50
+custom_proxy_group=DL_负载均衡(轮询)`load-balance`round-robin`(YT)`https://adoda-smart-coin.mushroomtrack.com`60,,50
+custom_proxy_group=DL_负载均衡(一致性哈希)`load-balance`consistent-hashing`(YT)`https://adoda-smart-coin.mushroomtrack.com`60,,50
+custom_proxy_group=DL_负载均衡(会话黏性)`load-balance`sticky-sessions`(YT)`https://adoda-smart-coin.mushroomtrack.com`60,,50
 
 ;Template
 ;ruleset=NAME,[]DOMAIN-SUFFIX,URL
