--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -140,6 +140,7 @@ custom_proxy_group=DL_负载均衡(会话黏性)`load-balance`sticky-sessions`(Y
 ;Template
 
 custom_proxy_group=漏网之鱼`select`[]TG`[]rou`[]手动选择`[]全球直连
+custom_proxy_group=手动选择`select`.*
 custom_proxy_group=全球直连`select`[]DIRECT
 ;设置分组标志位
 
