--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -110,11 +110,11 @@ custom_proxy_group=TG_负载均衡(轮询)`load-balance`round-robin`.*`http://14
 custom_proxy_group=TG_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`http://149.154.175.58:443`60,,50
 custom_proxy_group=TG_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`http://149.154.175.58:443`60,,50
 
-custom_proxy_group=rou_延迟选优`url-test`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
-custom_proxy_group=rou_故障转移`fallback`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
-custom_proxy_group=rou_负载均衡(轮询)`load-balance`round-robin`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
-custom_proxy_group=rou_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
-custom_proxy_group=rou_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://v.rn152.xyz/hls/cmcmxyk2n0000s69qui6cj1w2/cmcmxyk2n0000s69qui6cj1w2-720/CLS-014.jpg?v=6&exp=1756083600&auth=9XJZF9j2OmHp4oFF8hRT7KW2EH8HSYR2JpojljktOTM`60,,50
+custom_proxy_group=rou_延迟选优`url-test`.*`https://rou.video/home`60,,50
+custom_proxy_group=rou_故障转移`fallback`.*`https://rou.video/home`60,,50
+custom_proxy_group=rou_负载均衡(轮询)`load-balance`round-robin`.*`https://rou.video/home`60,,50
+custom_proxy_group=rou_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://rou.video/home`60,,50
+custom_proxy_group=rou_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://rou.video/home`60,,50
 
 custom_proxy_group=WEB_延迟选优`url-test`.*`https://jable.tv`60,,50
 custom_proxy_group=WEB_故障转移`fallback`.*`https://jable.tv`60,,50
@@ -138,7 +138,7 @@ custom_proxy_group=DL_负载均衡(会话黏性)`load-balance`sticky-sessions`(Y
 ;custom_proxy_group=NAME_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`TEST_URL`60,,50
 ;Template
 
-custom_proxy_group=漏网之鱼`select`[]TG`[]rou`[]手动选择`[]全球直连
+custom_proxy_group=漏网之鱼`select`[]TG`[]rou`[]自定义代理`[]手动选择`[]全球直连
 custom_proxy_group=手动选择`select`.*
 custom_proxy_group=全球直连`select`[]DIRECT
 ;设置分组标志位
