--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -102,7 +102,7 @@ ruleset=rou,[]DOMAIN-KEYWORD,rou
 custom_proxy_group=TG`select`[]TG_延迟选优`[]TG_故障转移`[]TG_负载均衡(轮询)`[]TG_负载均衡(一致性哈希)`[]TG_负载均衡(会话黏性)`.*
 custom_proxy_group=rou`select`[]rou_延迟选优`[]rou_故障转移`[]rou_负载均衡(轮询)`[]rou_负载均衡(一致性哈希)`[]rou_负载均衡(会话黏性)`.*
 custom_proxy_group=自定义代理`select`[]WEB_延迟选优`[]WEB_故障转移`[]WEB_负载均衡(轮询)`[]WEB_负载均衡(一致性哈希)`[]WEB_负载均衡(会话黏性)`.*
-custom_proxy_group=自定义下载`select`[]DL_延迟选优`[]DL_故障转移`[]DL_负载均衡(轮询)`[]DL_负载均衡(一致性哈希)`[]DL_负载均衡(会话黏性)`.*
+custom_proxy_group=自定义下载`select`[]全球直连`[]DL_延迟选优`[]DL_故障转移`[]DL_负载均衡(轮询)`[]DL_负载均衡(一致性哈希)`[]DL_负载均衡(会话黏性)`.*
 
 custom_proxy_group=TG_延迟选优`url-test`.*`http://149.154.175.58:443`60,,50
 custom_proxy_group=TG_故障转移`fallback`.*`http://149.154.175.58:443`60,,50
