--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -1,4 +1,6 @@
 ;https://gh-proxy.com/https://raw.githubusercontent.com/superpassby/Custom_OpenClash_Rules/refs/heads/main/.github/Custom_Clash_TG.ini
+;https://testingcf.jsdelivr.net/gh/superpassby/Custom_OpenClash_Rules@main/.github/Custom_Clash_TG.ini
+
 #http://149.154.175.58:443
 #https://www.gstatic.com/generate_204
 ;全分组防 DNS 泄漏订阅转换模板
@@ -28,8 +30,11 @@
 ;ruleset=手动选择,[]GEOIP,twitter,no-resolve
 ;ruleset=手动选择,[]FINAL
 ;设置规则标志位结束
-ruleset=自定义下载,https://raw.githubusercontent.com/superpassby/Custom_OpenClash_Rules/refs/heads/main/.github/MyRule/Download.list,28800
-ruleset=自定义代理,https://raw.githubusercontent.com/superpassby/Custom_OpenClash_Rules/refs/heads/main/.github/MyRule/Proxy.list,28800
+;ruleset=自定义下载,https://raw.githubusercontent.com/superpassby/Custom_OpenClash_Rules/refs/heads/main/.github/MyRule/Download.list,28800
+;ruleset=自定义代理,https://raw.githubusercontent.com/superpassby/Custom_OpenClash_Rules/refs/heads/main/.github/MyRule/Proxy.list,28800
+
+ruleset=自定义下载,clash-classic:https://testingcf.jsdelivr.net/gh/superpassby/Custom_OpenClash_Rules@main/.github/MyRule/Download.list,28800
+ruleset=自定义代理,clash-classic:https://testingcf.jsdelivr.net/gh/superpassby/Custom_OpenClash_Rules@main/.github/MyRule/Proxy.list,28800
 
 ruleset=全球直连,[]GEOSITE,private
 ruleset=全球直连,[]GEOIP,private,no-resolve
