--- a/.github/Custom_Clash_TG.ini
+++ b/.github/Custom_Clash_TG.ini
@@ -109,23 +109,23 @@ custom_proxy_group=rou`select`[]rou_延迟选优`[]rou_故障转移`[]rou_负载
 custom_proxy_group=自定义代理`select`[]WEB_延迟选优`[]WEB_故障转移`[]WEB_负载均衡(轮询)`[]WEB_负载均衡(一致性哈希)`[]WEB_负载均衡(会话黏性)`.*
 custom_proxy_group=自定义下载`select`[]全球直连`[]DL_延迟选优`[]DL_故障转移`[]DL_负载均衡(轮询)`[]DL_负载均衡(一致性哈希)`[]DL_负载均衡(会话黏性)`.*
 
-custom_proxy_group=TG_延迟选优`url-test`.*`http://149.154.175.58:443`60,,50
-custom_proxy_group=TG_故障转移`fallback`.*`http://149.154.175.58:443`60,,50
-custom_proxy_group=TG_负载均衡(轮询)`load-balance`round-robin`.*`http://149.154.175.58:443`60,,50
-custom_proxy_group=TG_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`http://149.154.175.58:443`60,,50
-custom_proxy_group=TG_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`http://149.154.175.58:443`60,,50
+custom_proxy_group=TG_延迟选优`url-test`(.*)`http://149.154.175.58:443`60,,50
+custom_proxy_group=TG_故障转移`fallback`(.*)`http://149.154.175.58:443`60,,50
+custom_proxy_group=TG_负载均衡(轮询)`load-balance`round-robin`(.*)`http://149.154.175.58:443`60,,50
+custom_proxy_group=TG_负载均衡(一致性哈希)`load-balance`consistent-hashing`(.*)`http://149.154.175.58:443`60,,50
+custom_proxy_group=TG_负载均衡(会话黏性)`load-balance`sticky-sessions`(.*)`http://149.154.175.58:443`60,,50
 
-custom_proxy_group=rou_延迟选优`url-test`.*`https://rou.video/home`60,,50
-custom_proxy_group=rou_故障转移`fallback`.*`https://rou.video/home`60,,50
-custom_proxy_group=rou_负载均衡(轮询)`load-balance`round-robin`.*`https://rou.video/home`60,,50
-custom_proxy_group=rou_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://rou.video/home`60,,50
-custom_proxy_group=rou_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://rou.video/home`60,,50
+custom_proxy_group=rou_延迟选优`url-test`(.*)`https://rou.video/home`60,,50
+custom_proxy_group=rou_故障转移`fallback`(.*)`https://rou.video/home`60,,50
+custom_proxy_group=rou_负载均衡(轮询)`load-balance`round-robin`(.*)`https://rou.video/home`60,,50
+custom_proxy_group=rou_负载均衡(一致性哈希)`load-balance`consistent-hashing`(.*)`https://rou.video/home`60,,50
+custom_proxy_group=rou_负载均衡(会话黏性)`load-balance`sticky-sessions`(.*)`https://rou.video/home`60,,50
 
-custom_proxy_group=WEB_延迟选优`url-test`.*`https://jable.tv`60,,50
-custom_proxy_group=WEB_故障转移`fallback`.*`https://jable.tv`60,,50
-custom_proxy_group=WEB_负载均衡(轮询)`load-balance`round-robin`.*`https://jable.tv`60,,50
-custom_proxy_group=WEB_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`https://jable.tv`60,,50
-custom_proxy_group=WEB_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`https://jable.tv`60,,50
+custom_proxy_group=WEB_延迟选优`url-test`(.*)`https://jable.tv`60,,50
+custom_proxy_group=WEB_故障转移`fallback`(.*)`https://jable.tv`60,,50
+custom_proxy_group=WEB_负载均衡(轮询)`load-balance`round-robin`(.*)`https://jable.tv`60,,50
+custom_proxy_group=WEB_负载均衡(一致性哈希)`load-balance`consistent-hashing`(.*)`https://jable.tv`60,,50
+custom_proxy_group=WEB_负载均衡(会话黏性)`load-balance`sticky-sessions`(.*)`https://jable.tv`60,,50
 
 custom_proxy_group=DL_延迟选优`url-test`(YT)`https://adoda-smart-coin.mushroomtrack.com`60,,50
 custom_proxy_group=DL_故障转移`fallback`(YT)`https://adoda-smart-coin.mushroomtrack.com`60,,50
@@ -136,11 +136,11 @@ custom_proxy_group=DL_负载均衡(会话黏性)`load-balance`sticky-sessions`(Y
 ;Template
 ;ruleset=NAME,[]DOMAIN-SUFFIX,URL
 ;custom_proxy_group=NAME`select`[]NAME_延迟选优`[]NAME_故障转移`[]NAME_负载均衡(轮询)`[]NAME_负载均衡(一致性哈希)`[]NAME_负载均衡(会话黏性)`.*
-;custom_proxy_group=NAME_延迟选优`url-test`.*`TEST_URL`60,,50
-;custom_proxy_group=NAME_故障转移`fallback`.*`TEST_URL`60,,50
-;custom_proxy_group=NAME_负载均衡(轮询)`load-balance`round-robin`.*`TEST_URL`60,,50
-;custom_proxy_group=NAME_负载均衡(一致性哈希)`load-balance`consistent-hashing`.*`TEST_URL`60,,50
-;custom_proxy_group=NAME_负载均衡(会话黏性)`load-balance`sticky-sessions`.*`TEST_URL`60,,50
+;custom_proxy_group=NAME_延迟选优`url-test`(.*)`TEST_URL`60,,50
+;custom_proxy_group=NAME_故障转移`fallback`(.*)`TEST_URL`60,,50
+;custom_proxy_group=NAME_负载均衡(轮询)`load-balance`round-robin`(.*)`TEST_URL`60,,50
+;custom_proxy_group=NAME_负载均衡(一致性哈希)`load-balance`consistent-hashing`(.*)`TEST_URL`60,,50
+;custom_proxy_group=NAME_负载均衡(会话黏性)`load-balance`sticky-sessions`(.*)`TEST_URL`60,,50
 ;Template
 
 custom_proxy_group=漏网之鱼`select`[]TG`[]rou`[]自定义代理`[]手动选择`[]全球直连
